# Magic-BI

./: .gitignore  README.md  README_zh.md  pyproject.toml  setup.py
config/: magic_bi_local.yml  system_local.yml
deployment/: .env  Dockerfile  docker-compose-components.yml  docker-compose-magic-bi.yml
docs/zh/: component.md  config.md  data.md  finetuned_llm.md  install.md  model.md
magic-frontend/: package-lock.json  package.json
magic-frontend/scripts/: setupTypeScript.js
magic-frontend/src/: App.svelte
magic_bi/: fake_main.py  main.py  offline_main.py  online_main.py  user.py
magic_bi/action/: action.py  action_to_str.py
magic_bi/agent/: agent_manager.py  agent_meta.py  agent_type.py  app_agent.py  base_agent.py  finetuned_llm_sql_agent.py  general_llm_sql_agent.py  memmory.py  pandas_agent.py  rag_agent.py  sql_explorer_agent.py  utils.py  work_flow_agent.py
magic_bi/app/: app.py  app_api.py  app_manager.py
magic_bi/config/: agent_config.py  base_config.py  elasticsearch_config.py  global_config.py  language_config.py  misc_config.py  model_config.py  neo4j_config.py  orm_config.py  oss_config.py  qdrant_config.py  rabbitmq_config.py  system_config.py  utils.py  web_config.py
magic_bi/data/: data.py  data_connector.py  data_connector_manager.py  data_connector_schema.py  data_manager.py  data_source.py  data_source_manager.py  data_source_schema.py  dataset.py  dataset_manager.py
magic_bi/db/: elasticsearch_adapter.py  neo4j_adapter.py  qdrant_adapter.py  sql_orm.py  timescale_orm.py
magic_bi/doc/: decode_doc.py  (+6 more)
script/: download_models.sh
(+100 files in other folders)
